fix the issue of the expire date of the company and make the delete of the company soft delete